modified styles.css and index.html to center button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,5 +41,13 @@ p{
     text-transform: capitalize;
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+}
+
+
 
 
